2001-01-31 John Fleck <jfleck@inkstain.net>

	added:
	* 2.x/2.2rnotes/rnfileroller.xml, rngnomeutilities.xml,
	release-notes.xml, rngnomeapplets.xml, rnmultimediakeys.xml
	docbooked version of Glynn's first draft of the release notes

2003-01-31  Murray Cumming  <murrayc@usa.net>

	* Removed 2.x/moduleinfo.py: Removed it because it isn't used and it's
	a duplication and jhbuild now uses an XML format that we can transform
	with XSL.

2003-01-22  Murray Cumming  <murrayc@usa.net>

	* 2.x/package-list: Added gnome-themes and startup-notification.

2003-01-22  Mark McLoughlin  <mark@skynet.ie>

	* 2.x/moduleinfo.py: add this list of what's in
	the release so we can generate the build order and
	dependancy diagram from it.

2003-01-20  Alex Duggan  <aldug@astrolinux.com>

	* 2.x/package-list: moved libvte to vte.  Approved by Murray.

2003-01-20  Murray Cumming  <murrayc@usa.net>

	* 2.x/package-list: Added ggv.

2002-12-22  Murray Cumming  <murrayc@usa.net>

	* 2.x/package-list: Added new modules such as acme, metacity,
	nautilus-media. Didn't bother with contact details because that should
	be in the cvs module that's linked anyway, and because jdub says
	he has a new module-list system in his as-yet-unseen new 
	developer.gnome.org site framework.

2002-12-22  Murray Cumming  <murrayc@usa.net>

	* 2.x/package-list:
	Changed versions to major versions only, 
	assuming, for instance, that 2.1.x will become 2.2 at the final
	release.
	Removed the lists of individual panel applets and utils - they
	are all in the same 2 modules.
	* releng2html: Removed link to dot.plan - this has been renamed
	and this link isn't used anyway - people copy and paste the table
	section only.

2002-09-15  Jeff Waugh  <jdub@perkypants.org>

	* 2.x/g2releasenotes.xml: Updates for 2.0.2.

2002-09-09  Steve Fox  <drfickle@k-lug.org>
	
	* 2.x/g2releasenotes.xml: scrollkeeper requires intltool.

2002-07-08  Glynn Foster  <glynn.foster@sun.com>
