@@ -1,4 +1,9 @@
-2001-01-31 John Fleck <jfleck@inkstain.net>
+2003-02-01 John Fleck <jfleck@inkstain.net>
+
+	* 2.x/2.2rnotes/release-notes.xml
+	fixing docbook up
+
+2003-01-31 John Fleck <jfleck@inkstain.net>
 
 	added:
 	* 2.x/2.2rnotes/rnfileroller.xml, rngnomeutilities.xml,
